# core-cpp-archive

./: .bettercodehub.yml  .gitignore  .gitmodules  .travis.yml  BUG_REPORT.md  CMakeLists.txt  CONTRIBUTING.md  README  README.md  bug.cpp  compile_external.sh  compile_external_release.sh  sonar-project.properties  test.cpp
.github/workflows/: ccpp.yml
assets/maps/antania/: Yzalt-BelowMadhouse-Dungeon.json
assets/npcs/: Miscellaneous.yml  Tutorial.yml
assets/npcs/antania/DedlaenMaze/: town.yml
assets/npcs/antania/Rylt/: beneath-prison.yml  cave-upstairs.yml  cave.yml  forest.yml  town.yml
assets/npcs/antania/Yzalt/: heniz.yml  madhouse.yml  steffen.yml
assets/npcs/resources/: copper.yml  flowers.yml  gold.yml  silver.yml  tree.yml
assets/npcs/risan/Frostlands/: town.yml
assets/npcs/summon/: healer.yml  holiday.yml  mage.yml  thief.yml
assets/profanity_locales/: en.json
benchmark/: main.cpp
benchmark/benchmark_helpers/: startup_helper.h
js_test/: a-star-benchmark.ts  fov-benchmark.ts  package.json  sensor-benchmark.ts
maps/risan/: FrozenCatacombs.json
sql/: init.sql  test_data.sql
src/: censor_sensor.cpp  censor_sensor.h  config.h  config_parsers.cpp  config_parsers.h  fov.cpp  fov.h  logger_init.cpp  logger_init.h  lotr_flat_map.h  main.cpp  on_leaving_scope.h  per_socket_data.h  random_helper.cpp  random_helper.h  utf.cpp  utf.h  uws_thread.cpp  uws_thread.h  working_directory_manipulation.cpp  working_directory_manipulation.h
src/ai/: default_ai.cpp  default_ai.h
src/asset_loading/: base64.cpp  load_assets.cpp  load_assets.h  load_character_select.cpp  load_character_select.h  load_item.cpp  load_item.h  load_map.cpp  load_map.h  load_npc.cpp  load_npc.h
src/database/: database_pool.cpp  database_pool.h  database_transaction.cpp  database_transaction.h
src/ecs/: components.cpp  components.h
src/game_logic/: a_star.cpp  a_star.h  censor_sensor.cpp  censor_sensor.h  fov.cpp  fov.h  location.h  logic_helpers.cpp  logic_helpers.h  random_helper.cpp  random_helper.h
src/game_queue_message_handlers/: player_enter_handler.cpp  player_enter_handler.h  player_enter_message_handler.cpp  player_enter_message_handler.h  player_leave_handler.cpp  player_leave_handler.h  player_leave_message_handler.cpp  player_leave_message_handler.h
src/game_queue_message_handlers/commands/: player_move_handler.cpp  player_move_handler.h
src/game_queue_messages/: messages.cpp  messages.h
src/map_loading/: load_map.cpp  load_map.h
src/message_handlers/: handler_macros.h  login_handler.cpp  login_handler.h  register_handler.cpp  register_handler.h
src/message_handlers/chat/: public_chat_handler.cpp  public_chat_handler.h
src/message_handlers/commands/: move_handler.cpp  move_handler.h
src/message_handlers/moderator/: set_motd_handler.cpp  set_motd_handler.h
src/message_handlers/user_access/: character_select_handler.cpp  character_select_handler.h  create_character_handler.cpp  create_character_handler.h  delete_character_handler.cpp  delete_character_handler.h  login_handler.cpp  login_handler.h  play_character_handler.cpp  play_character_handler.h  register_handler.cpp  register_handler.h
src/messages/: account_object.cpp  account_object.h  generic_error_response.cpp  generic_error_response.h  generic_ok_response.cpp  generic_ok_response.h  item_object.cpp  item_object.h  map_update_response.cpp  map_update_response.h  message.h  skill_object.cpp  skill_object.h
src/messages/chat/: message_request.cpp  message_request.h  message_response.cpp  message_response.h
src/messages/commands/: move_request.cpp  move_request.h
src/messages/moderator/: set_motd_request.cpp  set_motd_request.h  update_motd_response.cpp  update_motd_response.h
src/messages/objects/: account_object.cpp  account_object.h  character_object.cpp  character_object.h  item_object.cpp  item_object.h  skill_object.cpp  skill_object.h
src/messages/user_access/: character_select_request.cpp  character_select_request.h  character_select_response.cpp  character_select_response.h  create_character_request.cpp  create_character_request.h  create_character_response.cpp  create_character_response.h  delete_character_request.cpp  delete_character_request.h  login_request.cpp  login_request.h  login_response.cpp  login_response.h  play_character_request.cpp  play_character_request.h  register_request.cpp  register_request.h  user_entered_game_response.cpp  user_entered_game_response.h  user_joined_response.cpp  user_joined_response.h  user_left_game_response.cpp  user_left_game_response.h  user_left_response.cpp  user_left_response.h
src/repositories/: banned_users_repository.cpp  banned_users_repository.h  characters_repository.cpp  characters_repository.h  locations_repository.cpp  locations_repository.h  models.h  players_repository.cpp  players_repository.h  repository.h  stats_repository.cpp  stats_repository.h  users_repository.cpp  users_repository.h
test/: banned_users_repository_tests.cpp  censor_sensor_tests.cpp  custom_server.h  custom_websocket.h  fov_tests.cpp  locations_repository_tests.cpp  main.cpp  map_loading_tests.cpp  message_serialization_tests.cpp  players_repository_tests.cpp  random_helper_tests.cpp  users_repository_tests.cpp  utf_tests.cpp  xxhash_tests.cpp
test/ai_tests/: default_ai_tests.cpp
test/asset_loading_tests/: item_loading_tests.cpp  map_loading_tests.cpp
test/game_logic_tests/: a_star_tests.cpp
test/game_queue_handler_tests/: player_enter_tests.cpp  player_leave_tests.cpp
test/message_handler_tests/: register_handler_tests.cpp
test/repository_tests/: banned_users_repository_tests.cpp  characters_repository_tests.cpp  locations_repository_tests.cpp  players_repository_tests.cpp  stats_repository_tests.cpp  users_repository_tests.cpp
test/test_helpers/: startup_helper.cpp  startup_helper.h
ws_test_client/: delete_character_scenario.py  main.py  main_second_user.py  many_users_scenario.py  second_user.py  user_character_select_scenario.py  user_create_slot_three_scenario.py  user_login_scenario.py  wrong_character_name_scenario.py
(+134 files in other folders)
